basiccrud/other_deployment/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: my-app
    spec:
      containers:
        - name: my-app-container
          image: rakesh8874/base1:latest
          ports:
          - containerPort: 80
  selector:
    matchLabels:
      component: my-app
