basiccrud/other_deployment/web-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: web-service

spec:
  selector:
    component: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
